Fix Date problème on IE10

--- a/assets/stylesheets/common.css
+++ b/assets/stylesheets/common.css
@@ -132,6 +132,7 @@ h6 {
 }
 
 p, 
+blockquote,
 ul, 
 ol, 
 table, 
@@ -140,12 +141,19 @@ dl {
 	margin: 16px 0 0;	
 }
 
+blockquote {
+	border: dashed 1px #c4e4d4;
+}
+
 hr {
 	border: 0;
 	margin-top: 32px;
 	border-top: 1px solid rgba(102, 128, 153, 0.1);
 }
 
+textarea {
+	width: 100%;
+}
 
 .header h1 {
 	margin-top: 0;
@@ -191,6 +199,7 @@ hr {
 .breadcrumb a:visited:hover:before {
 	background-position: -14px 0;
 }
+
 
 
 /**************/
